--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -36,7 +36,7 @@ on:
       MAKEFILE_NAME:
         description: 'MAKEFILE_NAME'
         required: true
-        default: 'omni_malta'
+        default: 'twrp_malta'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
